<resources>
    <string name="app_name">نصوص معاصرة</string>
    <string name="app_caption">best android epub reader</string>
    <string name="open_epub">open epub activity</string>
    <string name="title_activity_epub_viewer">FullscreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="search">بحث</string>
    <string name="fast_setting_style">إعدادات سريعة</string>
    <string name="default_setting">الحالة الافتراضية</string>
    <string name="more_readability">حجم كبير</string>
    <string name="dark_mode">الحالة الليلية</string>
    <string name="high_contrast">تباين حاد</string>
    <string name="advanced_setting_style">إعدادات متقدمة</string>
    <string name="font">الخط</string>
    <string name="font_size">حجم الخط</string>
    <string name="line_height">فاصلة الخطوط</string>
    <string name="status">الوضع</string>
    <string name="light">المضيء</string>
    <string name="dark">المظلم</string>
    <string name="base_phone">تابع للنظام</string>
    <string name="font_dubai">Dubai</string>
    <string name="font_vazir">Vazir</string>
    <string name="font_nazanin">Nazanin</string>
    <string name="font_lotus">Lotus</string>
    <string name="iran_sans">Iran sans</string>
    <string name="style_setting">Style setting</string>
    <string name="bookmark">المفضلة</string>
    <string name="toc">الفهرست</string>
    <string name="book_name">كتاب بلا عنوان</string>
    <string name="toc_list">الفهرست</string>
    <string name="library">قائمة الكتب</string>
    <string name="all_tab">الجميع</string>
    <string name="cat_tab">التصنيفات</string>
    <string name="titles">العناوين</string>
    <string name="bookmarks">المفضلة</string>
    <string name="author_tab">الكتّاب</string>

    <style name="visible">ظاهر</style>

    <style name="gone">مخفي</style>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="query_hint_search">ابحث عن كلمة أو جملة في كلا المجلتين</string>
    <string name="hint_search_bar">ابدأ الكتابة لبدء البحث</string>
    <string name="ejtehad_title">الاجتهاد والتجديد</string>
    <string name="nosos_title">نصوص معاصرة</string>
    <string name="books_title">كتب المجلة</string>
    <string name="ejtehad_caption">فصلية متخصصة بقضايا الاجتهاد والتجديد الإسلامي</string>
    <string name="see_all">مشاهدة الجميع</string>
    <string name="title">عنوان</string>
    <string name="main_toc_title">مقالات مهمة</string>
    <string name="index">فهرست</string>
    <string name="query_hint_search_bookmark">ابدأ الكتابة لبدء البحث في المفضلة</string>
    <string name="info">حول التطبيق</string>
    <string name="title_activity_splash">صفحة الترحيب</string>
    <string name="index_title">فهرس المحتويات</string>
    <string name="bookmark_title">المفضلة</string>
    <string name="insert">إضافة</string>
    <string name="delete">حذف</string>
    <string name="search_all_book">الجميع</string>
    <string name="search_toolbar">البحث</string>
    <string name="nosos_caption">فصلية تعني بالفكر الديني المعاصر</string>
    <string name="error_copy_file">عذراً، لا يمكن نسخ الملفات لجهازك</string>
    <string name="bookmarked">تم إضافة هذه الصفحة للمفضلة</string>
    <string name="empty_search_result">بدون نتيجة</string>
    <string name="empty_bookmark">المفضلة فارغة</string>

    <string name="bookmark_item_title">علامة مرجعية </string>
    <string name="ejtehad_large_caption">\n
        مجلّة (الاجتهاد والتجديد) مجلّةٌ فصليّة، تصدر عن مركز البحوث المعاصرة في بيروت، وهي تعنى بمجال التجديد في الاجتهاد الشرعي والقانوني.
\n\n
 تأسّست المجلة عام 2006م، برئاسة تحرير الشيخ حيدر حبّ الله، ويرأس تحريرها منذ ٢٠٢٠ إلى ٢٠٢٢ الشيخ محمد عباس دهيني، وقد عملت وما تزال على المساهمة في رفد الساحة الفكريّة بالدراسات الجديدة والجريئة والنقديّة في مجال العلوم الشرعيّة المتصلة بالاجتهاد والفقه الإسلامي.
\n\n
 وقد تناولت المجلّة الكثير من القضايا الإشكاليّة والحسّاسة، ممّا يتصل بعلم أصول الفقه، وعلم الحديث والرجال، والقانون المقارن، والدراسات الشرعيّة المقارنة بين المذاهب، ومستحدثات المسائل وفقه النوازل وغير ذلك.
\n\n
وتعتمد المجلة نهج فتح الباب أمام الآراء المختلفة، فهي تطرح الرأي والرأي الآخر، وتعمل على فتح حوار جادّ بين التوجّهات الفكريّة والتجديديّة في العالم العربي والإسلامي على مستوى الاجتهاد الشرعي، وقد أثارت الكثير من المقالات التي نُشرت في هذه المجلة جدلاً وردود أفعال واسعة، حيث تناولت قضايا بالغة الحساسية، وخالفت الكثير من النتائج الفقهيّة التي كانت وما تزال سائدة في المدارس والجامعات والمعاهد الدينيّة إلى اليوم.
\n\n
 إنّها بحقّ مجلّة مثيرة للاهتمام، ويمكن من خلالها فتح آفاق جديدة للباحثين والكتّاب وطلاب الدراسات الدينيّة والقانونيّة والشرعيّة.
</string>
    <string name="nosos_large_caption">\n
        مجلّة (نصوص معاصرة) مجلّة فصليّة، تصدر عن مركز البحوث المعاصرة في بيروت، وهي تعنى بمجال الفكر الديني عموماً.

\n\n
        تأسّست المجلة عام 2005م، برئاسة تحرير الشيخ حيدر حبّ الله، ويرأس تحريرها منذ ٢٠٢٠ إلى ٢٠٢٢ الشيخ محمد عباس دهيني، وقد عملت وما تزال على ترجمة الدراسات الفكرية والثقافية المتصلة بالشأن الديني عن اللغات غير العربيّة، وتناولت أكثر القضايا إشكاليّةً وحساسيّة ممّا يتصل بفلسفة الدين، وعلم الكلام الجديد، والدراسات الحديثة في مجال القرآنيات، والكلام الديني، وكذلك في مجال القراءات المقارنة فيما يتصل بالفكر الغربي والإسلامي وغير ذلك.
\n\n
        وتعتمد المجلة نهج فتح الباب أمام الآراء المختلفة، فهي تطرح الرأي والرأي الآخر، وتعمل على فتح حوار جادّ بين التوجّهات الفكريّة والتجديديّة في العالم العربي والإسلامي، وقد أثارت الكثير من المقالات التي نُشرت في هذه المجلة جدلاً وردود أفعال واسعة، حيث تناولت قضايا بالغة الحساسية.
\n\n
        إنّها بحقّ مجلّة مثيرة للاهتمام، ويمكن من خلالها فتح آفاق جديدة للباحثين والكتّاب وطلاب الدراسات الدينيّة.</string>
    <string name="dialogTitle">جاري تهئية الفهارس</string>
    <string name="dialogDes">يرجى الانتظار حتى إتمام تهيئة الفهارس</string>
    <string name="searching_title">"جاري البحث في: "</string>
    <string name="books_caption">كتب مجلتي الاجتهاد والتجديد ونصوص معاصرة</string>
</resources>