<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.amorphteam.ketub.ui.main.tabs.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" />

    <fragment
        android:id="@+id/navigation_index"
        android:name="com.amorphteam.nososejtehad.index.IndexFragment"
        android:label="@string/index"
        tools:layout="@layout/fragment_index" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.amorphteam.nososejtehad.bookmark.BookmarkFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_bookmark" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.amorphteam.nososejtehad.index.IndexFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
</navigation>