<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_library">

    <fragment
        android:id="@+id/navigation_library"
        android:name="com.amorphteam.ketub.ui.main.tabs.library.LibraryFragment"
        android:label="@string/library"
        tools:layout="@layout/fragment_library" >
        <action
            android:id="@+id/action_navigation_library_to_detailFragment"
            app:destination="@id/detailFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_index"
        android:name="com.amorphteam.ketub.ui.main.tabs.toc.TocContainerFragment"
        android:label="@string/index"
        tools:layout="@layout/fragment_toc_container" />

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.amorphteam.ketub.ui.main.tabs.bookmark.BookmarkContainerFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_bookmark_container" />

    <fragment
        android:id="@+id/navigation_info"
        android:name="com.amorphteam.nososejtehad.info.InfoFragment"
        android:label="@string/info"
        tools:layout="@layout/fragment_info" />
    <fragment
        android:id="@+id/detailFragment"
        android:name="com.amorphteam.ketub.ui.main.tabs.library.DetailFragment"
        android:label="DetailFragment" >
        <action
            android:id="@+id/action_detailFragment_to_navigation_library"
            app:destination="@id/navigation_library" />
        <argument
            android:name="catSection"
            app:argType="com.amorphteam.ketub.model.CatSection" />
    </fragment>
</navigation>