<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.amorphteam.ketub.ui.epub.EpubViewModel" />
    </data>

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:elevation="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@drawable/rounded_edge"
        android:padding="@dimen/normal_margin"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <TextView
            style="@style/title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/fast_setting_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/half_margin"
                    android:src="@drawable/ic_resource_default"
/>
                <TextView
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/default_setting"
/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/half_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_legibility" />

                <TextView
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/more_readability"
/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/half_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_dark" />

                <TextView
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark_mode"
/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/half_margin"
                    android:src="@drawable/ic_contrast" />

                <TextView
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/high_contrast"
/>
            </LinearLayout>


        </LinearLayout>

        <TextView
            style="@style/title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="?attr/colorPrimaryVariant"
            android:layout_marginTop="@dimen/large_margin"
            android:text="@string/advanced_setting_style" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:gravity="center_vertical"
                android:layout_marginBottom="@dimen/normal_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/body"
                    android:layout_width="@dimen/title_width_item"
                    android:layout_height="wrap_content"
                    android:text="@string/font" />

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:clipChildren="true"
                    android:clipToPadding="false">

                    <com.google.android.material.chip.ChipGroup
                        android:id="@+id/chip_group"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        app:singleLine="true"
                        app:singleSelection="true">

                        <com.google.android.material.chip.Chip
                            android:id="@+id/font_dubai"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/font_dubai"
                            android:layout_height="wrap_content"
                            />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/font_nazanin"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/font_nazanin"
                            android:layout_height="wrap_content"
                            />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/font_lotus"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/font_lotus"
                            android:layout_height="wrap_content"

                            />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/font_vazir"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/font_vazir"
                            android:layout_height="wrap_content"
                            />

                        <com.google.android.material.chip.Chip
                            android:id="@+id/font_iran_sans"
                            style="@style/chipStyle"
                            android:layout_width="wrap_content"
                            android:text="@string/iran_sans"
                            android:layout_height="wrap_content"
                            />

                    </com.google.android.material.chip.ChipGroup>


                </HorizontalScrollView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/body"
                    android:layout_width="@dimen/title_width_item"
                    android:layout_height="wrap_content"
                    android:text="@string/font_size" />

                <SeekBar
                    android:layout_width="0dp"
                    android:layout_gravity="center_vertical"
                    style="@style/SeekBar"
                    android:max="5"
                    android:progress="@{viewModel.currentFontSize}"
                    android:onProgressChanged="@{viewModel.updateFontSizeSeekBar}"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_plus_small"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/normal_margin"
                android:layout_marginBottom="@dimen/normal_margin"
                android:orientation="horizontal">

                <TextView
                    style="@style/body"
                    android:layout_width="@dimen/title_width_item"
                    android:layout_height="wrap_content"
                    android:text="@string/line_height" />

                <SeekBar
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    style="@style/SeekBar"
                    android:progress="@{viewModel.currentLineSpace}"
                    android:onProgressChanged="@{viewModel.updateLineSpaceSeekBar}"
                    android:max="5"
                    android:layout_weight="1" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/ic_plus_small"/>
            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:background="@color/onbackground1" />

        <TextView
            style="@style/title4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginBottom="@dimen/normal_margin"
            android:text="@string/status" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:id="@+id/light_countiner"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/light"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/half_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_light"
/>

                <TextView
                    android:id="@+id/light_text"
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/light"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/dark"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/half_margin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_dark"
/>

                <TextView
                    android:id="@+id/dark_text"
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dark"
/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/basetheme"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="?attr/selectableItemBackgroundBorderless"
                    android:padding="@dimen/half_margin"
                    android:backgroundTint="@android:color/transparent"
                    android:src="@drawable/ic_phone"
/>

                <TextView
                    android:id="@+id/basetheme_text"
                    style="@style/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/base_phone"
/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</layout>